[workspace]
resolver = "2"
members = [
    "crates/thorn-api",
    "crates/thorn-core",
    "crates/thorn-cli",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
license = "MIT"
authors = ["Bram"]

[workspace.dependencies]
# Internal crates
thorn-api = { path = "crates/thorn-api" }
thorn-core = { path = "crates/thorn-core" }

# Parser
tree-sitter = "0.24"
tree-sitter-python = "0.23"

# External
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
toml = "0.8"
md5 = "0.7"
