[package]
name = "thorn-cli"
description = "CLI binary for the Thorn linter"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "thorn"
path = "src/main.rs"

[dependencies]
thorn-api = { workspace = true }
thorn-core = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
