[package]
name = "thorn-cli"
description = "CLI library for the Thorn linter — plugins call thorn_cli::run() to build their binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thorn-api = { workspace = true }
thorn-core = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
md5 = { workspace = true }
