[package]
name = "thorn-core"
description = "Core linting runner for Thorn"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thorn-api = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
